--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,7 +19,7 @@
     <java.version>17</java.version>
     <lombok.version>1.18.34</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+    <org.mapstruct.version>1.6.2</org.mapstruct.version>
     <openapi-generator-maven-plugin.version>7.8.0</openapi-generator-maven-plugin.version>
     <boat-maven-plugin.version>0.17.47</boat-maven-plugin.version>
     <!--    <boat-maven-plugin.version>0.16.11</boat-maven-plugin.version>-->
