--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.2</version>
+    <version>3.3.4</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -19,8 +19,8 @@
     <java.version>17</java.version>
     <lombok.version>1.18.34</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-    <openapi-generator-maven-plugin.version>7.8.0</openapi-generator-maven-plugin.version>
+    <org.mapstruct.version>1.6.2 </org.mapstruct.version>
+    <openapi-generator-maven-plugin.version>7.9.0</openapi-generator-maven-plugin.version>
     <boat-maven-plugin.version>0.17.47</boat-maven-plugin.version>
     <!--    <boat-maven-plugin.version>0.16.11</boat-maven-plugin.version>-->
     <spec.resources.path>${project.build.directory}/specs</spec.resources.path>
