--- a/client/pom.xml
+++ b/client/pom.xml
@@ -84,8 +84,8 @@
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.8.0</version>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.8.13</version>
     </dependency>
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
