--- a/client/pom.xml
+++ b/client/pom.xml
@@ -212,7 +212,7 @@
             <version>${openapi-generator-maven-plugin.version}</version>
             <executions>
               <execution>
-                <id>generate-jsonplaceholder-api-resttemplate</id>
+                <id>generate-jsonplaceholder-api-restclient</id>
                 <goals>
                   <goal>generate</goal>
                 </goals>
@@ -223,10 +223,10 @@
                   <generateApiTests>false</generateApiTests>
                   <generateModelTests>false</generateModelTests>
                   <configOptions>
-                    <library>resttemplate</library>
+                    <library>restclient</library>
                     <dateLibrary>java8</dateLibrary>
-                    <apiPackage>com.example.api.jsonplaceholder.resttemplate.api.v1</apiPackage>
-                    <modelPackage>com.example.api.jsonplaceholder.resttemplate.api.v1.model</modelPackage>
+                    <apiPackage>com.example.api.jsonplaceholder.restclient.api.v1</apiPackage>
+                    <modelPackage>com.example.api.jsonplaceholder.restclient.api.v1.model</modelPackage>
                     <useBeanValidation>true</useBeanValidation>
                     <useJakartaEe>true</useJakartaEe>
                     <generateClientAsBean>true</generateClientAsBean>
@@ -256,7 +256,7 @@
                 </configuration>
               </execution>
               <execution>
-                <id>generate-todo-api-resttemplate</id>
+                <id>generate-todo-api-restclient</id>
                 <goals>
                   <goal>generate</goal>
                 </goals>
@@ -267,10 +267,10 @@
                   <generateApiTests>false</generateApiTests>
                   <generateModelTests>false</generateModelTests>
                   <configOptions>
-                    <library>resttemplate</library>
+                    <library>restclient</library>
                     <dateLibrary>java8</dateLibrary>
-                    <apiPackage>com.example.api.todo.resttemplate.api.v1</apiPackage>
-                    <modelPackage>com.example.api.todo.resttemplate.api.v1.model</modelPackage>
+                    <apiPackage>com.example.api.todo.restclient.api.v1</apiPackage>
+                    <modelPackage>com.example.api.todo.restclient.api.v1.model</modelPackage>
                     <useBeanValidation>true</useBeanValidation>
                     <useJakartaEe>true</useJakartaEe>
                     <generateClientAsBean>true</generateClientAsBean>
@@ -278,7 +278,7 @@
                 </configuration>
               </execution>
               <execution>
-                <id>generate-todo-api-resttemplatecustom</id>
+                <id>generate-todo-api-restclientcustom</id>
                 <goals>
                   <goal>generate</goal>
                 </goals>
@@ -292,10 +292,10 @@
                     <typeMapping>OffsetDateTime=java.time.Instant</typeMapping>
                   </typeMappings>
                   <configOptions>
-                    <library>resttemplate</library>
+                    <library>restclient</library>
                     <dateLibrary>java8</dateLibrary>
-                    <apiPackage>com.example.api.todo.resttemplatecustom.api.v1</apiPackage>
-                    <modelPackage>com.example.api.todo.resttemplatecustom.api.v1.model</modelPackage>
+                    <apiPackage>com.example.api.todo.restclientcustom.api.v1</apiPackage>
+                    <modelPackage>com.example.api.todo.restclientcustom.api.v1.model</modelPackage>
                     <useBeanValidation>true</useBeanValidation>
                     <useJakartaEe>true</useJakartaEe>
                     <generateClientAsBean>true</generateClientAsBean>
