--- a/server/pom.xml
+++ b/server/pom.xml
@@ -220,7 +220,7 @@
                   <generateApiTests>false</generateApiTests>
                   <generateModelTests>false</generateModelTests>
                   <configOptions>
-                    <library>resttemplate</library>
+                    <library>restclient</library>
                     <dateLibrary>java8</dateLibrary>
                     <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
                     <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
@@ -297,7 +297,7 @@
                   <generateApiTests>false</generateApiTests>
                   <generateModelTests>false</generateModelTests>
                   <configOptions>
-                    <library>resttemplate</library>
+                    <library>restclient</library>
                     <dateLibrary>java8</dateLibrary>
                     <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
                     <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
